--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>EnumsDaysUntilFriday</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>EnumsDaysUntilFriday</name>
-	<description>Enums Task SoftwareGuild</description>
+	<description>Enum Task Software Guild</description>
 
 	<properties>
 		<java.version>1.8</java.version>
